lints.workspace = true

[package]
edition.workspace = true
license.workspace = true
name = "craneboy_core"
rust-version.workspace = true
version.workspace = true

[dependencies]
deno_core_icudata = { version = "0.74", optional = true }
deno_error = "0.7"
deno_ops = "0.231"
deno_path_util = "0.6"
deno_unsync = "0.4"